viya4/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-report-images/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportImages
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-images
    sas.com/admin: namespace
  name: sas-report-images
spec:
  host: $(INGRESS_HOST)
  path: /reportImages
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-images
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportImages
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-images
    sas.com/admin: namespace
  name: sas-report-images-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /reportImages
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-images
  wildcardPolicy: Subdomain
